2008-09-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #9393: Small code cleanup in class.t3lib_treeview.php
	* Fixed bug #8578: Umlauts get displayed wrong in Web>Access module after updating rights (Thanks to Tobias Liebig and Susanne Moog)

2008-09-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9384: FE session hijacking

2008-09-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9393: Cosmetic Code Cleanup for the cms sysext

2008-09-18  Martin Kutschker  <masi@typo3.org>

	* Followup to bugfix #8950: clean up code
	* Fix bug #8588: Admin tools -> User Admin -> List users online broken when [BE][lockIP] is set to < 4

2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
	* Fixed bug #9320: Adding a new mount-type "readonly" for temporary filemounts (thanks to Steffen Kamper)
	* Added feature #8899: Configuration of uploads and create folder in linkbrowser (thanks to Steffen Kamper and Dmitry Dulepov)

2008-09-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9346: Preinitialise GLOBALS[LANG] in init.php (thanks to Steffen Kamper)

2008-09-17  Martin Kutschker  <masi@typo3.org>

	* Added feature #1957: When deleting a record in the BE, the message should show the record label (thanx to Rob Vonk for the initial patch)
	* Added feature #8995: Extension "felogin" - replace user fields in display messages (thanx to Steffen Kamper)

2008-09-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9370: htmlArea RTE: enhanced toggleborders feature

2008-09-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9362: htmlArea RTE: highlight active items in context menu as in toolbar
	* Follow up to #9354: htmlArea RTE: no default css rule is provided for indentation: px to em

2008-09-16  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9360: TypoScript Object Browser interprets HTML Tags in comments (Thanks to Stefano Kowalke)
